--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,4 @@ lib_deps =
 	plerup/EspSoftwareSerial@^6.15.1
 	bodmer/TFT_eSPI@2.3.73
 	adafruit/Adafruit BME280 Library@^2.2.1
+	bodmer/JPEGDecoder@^1.8.1
