--- a/platformio.ini
+++ b/platformio.ini
@@ -24,3 +24,5 @@ lib_deps =
 	bodmer/TFT_eSPI@2.3.73
 	adafruit/Adafruit BME280 Library@^2.2.1
 	bodmer/JPEGDecoder@^1.8.1
+	256dpi/MQTT@^2.5.0
+	mertmechanic/ArduinoJson@^5.13.4
