--- a/platformio.ini
+++ b/platformio.ini
@@ -19,10 +19,9 @@ platform_packages =
 	toolchain-xtensa32@~2.80400.0
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.5
-	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
 	plerup/EspSoftwareSerial@^6.15.1
 	bodmer/TFT_eSPI@2.3.73
 	adafruit/Adafruit BME280 Library@^2.2.1
 	bodmer/JPEGDecoder@^1.8.1
-	256dpi/MQTT@^2.5.0
-	mertmechanic/ArduinoJson@^5.13.4
+	amcewen/HttpClient@^2.2.0
+	arduino-libraries/Ethernet@^2.0.0
