--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ platform_packages =
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.5
 	plerup/EspSoftwareSerial@^6.15.1
-	bodmer/TFT_eSPI@2.3.73
 	adafruit/Adafruit BME280 Library@^2.2.1
 	bodmer/JPEGDecoder@^1.8.1
 	claws/BH1750@^1.2.0
+	bodmer/TFT_eSPI@^2.4.25
