--- a/platformio.ini
+++ b/platformio.ini
@@ -9,14 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
+; platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
+platform = espressif32
 board = esp32dev
 upload_port = COM5
 monitor_speed = 115200
 framework = arduino
-platform_packages = 
-	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-	toolchain-xtensa32@~2.80400.0
+; platform_packages = 
+;	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+;	toolchain-xtensa32@~2.80400.0
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.5
 	plerup/EspSoftwareSerial@^6.15.1
