wip, with MPU6050, but will switch to SW520D

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,15 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-; platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
 platform = espressif32
 board = esp32dev
 upload_port = COM5
 monitor_speed = 115200
 framework = arduino
-; platform_packages = 
-;	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-;	toolchain-xtensa32@~2.80400.0
+lib_extra_dirs =
+	/lib
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.5
 	plerup/EspSoftwareSerial@^6.15.1
@@ -25,3 +23,5 @@ lib_deps =
 	bodmer/JPEGDecoder@^1.8.1
 	claws/BH1750@^1.2.0
 	bodmer/TFT_eSPI@^2.4.25
+	mikalhart/TinyGPSPlus@^1.0.3
+
