--- a/sdcard/weather.cfg
+++ b/sdcard/weather.cfg
@@ -1,7 +1,7 @@
 {
   "wu_api_key": "af167648533f4fbd967648533fafbdd7",
   "zip": 94070,
-  "station_id" = "KCASANCA12"
+  "station_id" : "KCASANCA12",
   "WIFI": {
     "hostname": "weather-checker",
     "ssid": "whitefox-weather",
